--- a/style.css
+++ b/style.css
@@ -13,6 +13,10 @@ body
 {
   background-color:   hsl(185, 41%, 84%);
   font-family: 'Space Mono',monospace;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 .main{
   /* display: grid; grid-template-columns: 1fr 1fr;  */
@@ -23,6 +27,7 @@ body
   justify-content: center space-evenly;
   align-items: center;
   margin: 10% auto;
+  position: relative;
   padding: 1rem;
   border-radius:0.5rem ;
 }
@@ -126,6 +131,16 @@ input[type=number] {
   -moz-appearance: textfield;
 }
 
+.heading
+{
+  color: hsl(183, 100%, 15%);
+  margin: auto;
+  width: 2rem;
+  height: 1rem;
+}
+.heading h1{
+  height: fit-content;
+}
 @media only screen and (max-width:1204px) {
     .main
     {
@@ -139,5 +154,9 @@ input[type=number] {
     }
     .select-inputs,.reset
     {width: 100%;}
+    .heading
+    {
+      margin-bottom:5rem;
+    }
     
 }
